<resources>

        <string name="app_name">NoteShare</string>

        <string name="mes">My</string>
        <string name="notes">Notes</string>
        <string name="important">Important</string>
        <string name="titre">Titre</string>
        <string name="contenu">Contenu</string>
        <!-- TODO: Remove or change this placeholder text -->
        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="compte">Creation de Compte</string>
        <string name="recherche">Rechercher</string>
        <string name="collaboration">Collaboration</string>
        <string name="mots_chercher">Recherche du</string>
        <string name="email">email</string>
        <string name="mots_de_passe">Mots de passe</string>
        <string name="confirme_ton_mots_de_passe">Confirme ton Mots de passe</string>
        <string name="creer_un_compte">Creer un compte</string>
        <string name="connectez_vous">Connectez vous</string>

        <string name="se_connectez">Se connectez</string>
        <string name="nouveau_compte">Nouveau Compte</string>


    <string name="document_pas_enregistrer">Le document n\'a pas de titre</string>
    <string name="Enregistement_reussie">Enregistrement reusie</string>
    <string name="Aucun_element">Aucun element trouvé</string>
    <string name="supprimer">Supprimer</string>
    <string name="Partager">Partager</string>
    <string name="pas_connect">Vous n\'etes pas connecté</string>
    <string name="Ajout_reussi">Ajout reussi</string>

</resources>