<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white"
    >
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/mes"
            android:textColor="@color/black"

            android:textSize="@dimen/textPrincipale" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/notes"
            android:textColor="@color/black"
            android:textSize="@dimen/textPrincipale" />
    </LinearLayout>
    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/connectez_vous"
        android:textColor="@color/orange"

        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0"
        tools:layout_editor_absoluteX="25dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"

            android:background="@drawable/shap"
            android:hint="@string/email"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:inputType="textPassword"
            android:background="@drawable/shap"
            android:hint="@string/mots_de_passe"
            android:paddingLeft="5dp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>

    <Button
        android:id="@+id/connecter"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="35dp"
        android:backgroundTint="@color/orange"
        android:text="@string/se_connectez"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    <Button
        android:id="@+id/compte"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="35dp"
        android:backgroundTint="@color/black"
        android:text="@string/nouveau_compte"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@+id/connecter" />



</androidx.constraintlayout.widget.ConstraintLayout>