<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#EAE7E7"
    android:layout_marginBottom="10dp"
    >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/mes"
            android:textColor="@color/black"

            android:textSize="@dimen/textPrincipale" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/notes"
            android:textColor="@color/black"
            android:textSize="@dimen/textPrincipale" />
    </LinearLayout>

    <ImageView
        android:id="@+id/user"
        android:layout_width="@dimen/icon"
        android:layout_height="@dimen/icon"
        android:src="@drawable/avatar"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="0"
        android:layout_margin="20dp"
        android:clickable="true"
        />
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0">

        <EditText
            android:id="@+id/recherche"
            android:imeOptions="actionSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/shap"
            android:hint="@string/recherche"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:inputType="text"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/contenu"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0"
        tools:layout_editor_absoluteX="10dp"
        android:layout_marginLeft="15dp"
        >

        <TextView
            android:id="@+id/notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/notes"
            android:textColor="@color/black"
            android:textSize="@dimen/textSceondaire"
            android:textStyle="bold"
            android:clickable="true"
            />

        <TextView
            android:id="@+id/important"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/important"
            android:textColor="@color/black"
            android:textSize="@dimen/textSceondaire"
            android:textStyle="bold"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/partage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/collaboration"
            android:textColor="@color/black"
            android:textSize="@dimen/textSceondaire"
            android:textStyle="bold"
            android:clickable="true"
            />
    </LinearLayout>

    <fragment
        android:id="@+id/contenu"
        android:name="com.example.noteshare.fragment.Contenu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:backgroundTint="@color/orange"
        android:contentDescription="@string/app_name"
      android:layout_margin="20dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="1"
        app:srcCompat="@drawable/add" />





</androidx.constraintlayout.widget.ConstraintLayout>